# BugLife

./: Bug.cpp  Bug.h  CMakeLists.txt  Crawler.cpp  Crawler.h  Hopper.cpp  Hopper.h  SuperBug.cpp  SuperBug.h  Teleporter.cpp  Teleporter.h  bugs.txt  bugs_life_history_date_time.out  main.cpp
